# AdventOfCode2020

./: Cargo.toml  README.md
.cargo/: config.toml
src/: day01.rs  day03.rs  day06.rs  day07.rs  day1.rs  day10.rs  day11.rs  day12.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  main.rs  mainx.rs
src/day1/: mod.rs
src/day2/: mod.rs
