[package]
name = "adventofcode"
version = "0.1.0"
authors = ["Ferdinand Linnenberg <ferdinand.linnenberg@aol.com>"]
edition = "2018"


[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
rayon = "1.5.0"
stackvec = "0.2.1"
hex = "0.4.2"
regex = "1.4.2"
pathfinding = "2.0.4"

[profile.release]
opt-level=3
debug=false
debug-assertions=false
overflow-checks=false
lto=true
panic="abort"
incremental=false
codegen-units=1
rpath=false